--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
             <div class="row padding-tb m_dec-top align-items-center d-flex">
                 <div class="col-lg-6">
                     <div class="header-left">
-                        <div class="header-thumbnail">
-                            <img src="images/banner-10.png" alt="">
-                        </div>
                         <div class="header-info-content">
-                            <h4 class="title">Dídac Fibla Escoto</h4>
-                            <div class="status-info">Full stack developer & hardware engineer</div>
+                            <h6 class="" style="font-weight: normal;">Hi, my name is </h6>
+                            <h4 class="title" style=" color: #5A9F71">Dídac Fibla Escoto</h4>
+                            <h6 style="font-weight: normal;">I am a <strong style=" color: #5A9F71">Fullstack Hardware Developer!</strong></h6>
                             <!-- social sharea area -->
                             <div class="social-share-style-1 border-none mt--40">
                                 <ul class="social-share d-flex liststyle">
                                     <li class="linkedin">
                                         <a href="https://www.linkedin.com/in/d%C3%ADdac-fibla-escoto-96b300185/">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="blue"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                 viewBox="0 0 24 24" fill="blue">
+                                                <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                                            </svg>
                                         </a>
                                     </li>
                                     <li class="github">
@@ -137,8 +138,6 @@
                                                      data-aos-once="true" class="col-lg-7 mt_sm--30">
                                                     <div class="contant">
                                                         <div class="section-title text-left">
-                                                                <span class="subtitle">Visit my portfolio &amp; Hire
-                                                                    me</span>
                                                             <h2 class="title small-h2">About Me</h2>
                                                         </div>
                                                         <p class="discription color-body">
