--- a/index.html
+++ b/index.html
@@ -67,12 +67,10 @@
 
                         </div>
                         <p class="discription color-body">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Eum in eos saepe ipsa
-
+                            Como desarrollador, mi enfoque se centra en fusionar hardware y software para crear soluciones prácticas y eficientes. Mi objetivo es desarrollar dispositivos inteligentes que mejoren la vida cotidiana de las personas.
                         </p>
 
-                        <a class="rn-btn" href="#"><span>DOWNLOAD MY CV</span></a>
+                        <a class="rn-btn" href="docs/cv.pdf" download><span>DOWNLOAD MY CV</span></a>
 
                     </div>
                 </div>
@@ -81,7 +79,7 @@
             <div class="row mt--40 tab-content-wrapper">
                 <div class="tab-area">
 
-                    <div class="tab-content"> <!--aqui-->
+                    <div class="tab-content">
 
                         <div class="tab-pane fade  show active" id="v-pills-Javascript" role="tabpanel" aria-labelledby="v-pills-home-tab">
 
