--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                             Como desarrollador, mi enfoque se centra en fusionar hardware y software para crear soluciones prácticas y eficientes. Mi objetivo es desarrollar dispositivos inteligentes que mejoren la vida cotidiana de las personas.
                         </p>
 
-                        <a class="rn-btn" href="docs/cv.pdf" download><span>DOWNLOAD MY CV</span></a>
+                        <a class="rn-btn" href="docs/cv.pdf" download target="_blank"><span>DOWNLOAD MY CV</span></a>
+
 
                     </div>
                 </div>
@@ -117,15 +118,11 @@
                                                             <div class="category-list">
                                                                 <a href="javascript:void(0)">Development</a>
                                                             </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                600</span>
-                                                            </div>
+
                                                         </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">The
-                                                            services provide for design <i
-                                                                    class="feather-arrow-up-right"></i></a>
+                                                        <h4 class="title"><a href="javascript:void(0)">
+                                                            Proyecto 1
+                                                            <i class="feather-arrow-up-right"></i></a>
                                                         </h4>
                                                     </div>
                                                 </div>
