--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                         </div>
                         <p class="discription color-body">
-                            Como desarrollador, mi enfoque se centra en fusionar hardware y software para crear soluciones prácticas y eficientes. Mi objetivo es desarrollar dispositivos inteligentes que mejoren la vida cotidiana de las personas.
+                            Como desarrollador, mi enfoque se centra en fusionar hardware y software para crear soluciones prácticas y eficientes. Mi objetivo es desarrollar sistemas inteligentes que mejoren la vida cotidiana de las personas.
                         </p>
 
                         <a class="rn-btn" href="docs/cv.pdf" download target="_blank"><span>DOWNLOAD MY CV</span></a>
@@ -109,19 +109,19 @@
                                                 <div class="inner">
                                                     <div class="thumbnail">
                                                         <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-01.jpg"
+                                                            <img src="images/projects/esp32-gate.png"
                                                                  alt="Personal Portfolio Images">
                                                         </a>
                                                     </div>
                                                     <div class="content">
                                                         <div class="category-info">
                                                             <div class="category-list">
-                                                                <a href="javascript:void(0)">Development</a>
+                                                                <a href="javascript:void(0)">#IoT #hardware #esp32 #ControlRemoto</a>
                                                             </div>
 
                                                         </div>
                                                         <h4 class="title"><a href="javascript:void(0)">
-                                                            Proyecto 1
+                                                            ESP32-Gate: Control y Acceso Inteligente de Puertas con Telegram
                                                             <i class="feather-arrow-up-right"></i></a>
                                                         </h4>
                                                     </div>
@@ -138,57 +138,19 @@
                                                 <div class="inner">
                                                     <div class="thumbnail">
                                                         <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-02.jpg"
+                                                            <img src="images/projects/smart-home-protection.png"
                                                                  alt="Personal Portfolio Images">
                                                         </a>
                                                     </div>
                                                     <div class="content">
                                                         <div class="category-info">
                                                             <div class="category-list">
-                                                                <a href="javascript:void(0)">Application</a>
+                                                                <a href="javascript:void(0)">#IoT #hardware #raspberry #Seguridad</a>
                                                             </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                750</span>
-                                                            </div>
-                                                        </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">Mobile
-                                                            app landing
-                                                            design &amp; app
-                                                            maintain<i class="feather-arrow-up-right"></i></a>
-                                                        </h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End Single Portfolio -->
 
-                                        <!-- Start Single Portfolio -->
-                                        <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
-                                             class="col-lg-6 col-xl-4 col-md-6 col-12 mt--30 mt_md--30 mt_sm--30">
-                                            <div class="rn-portfolio" data-bs-toggle="modal"
-                                                 data-bs-target="#exampleModalCenter">
-                                                <div class="inner">
-                                                    <div class="thumbnail">
-                                                        <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-03.jpg"
-                                                                 alt="Personal Portfolio Images">
-                                                        </a>
-                                                    </div>
-                                                    <div class="content">
-                                                        <div class="category-info">
-                                                            <div class="category-list">
-                                                                <a href="javascript:void(0)">Photoshop</a>
-                                                            </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                630</span>
-                                                            </div>
                                                         </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">Logo
-                                                            design creativity &amp; Application
+                                                        <h4 class="title"><a href="javascript:void(0)">
+                                                            Smart Home Protection: Protección inteligente para tu hogar
                                                             <i class="feather-arrow-up-right"></i></a>
                                                         </h4>
                                                     </div>
@@ -205,25 +167,19 @@
                                                 <div class="inner">
                                                     <div class="thumbnail">
                                                         <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-04.jpg"
-                                                                 alt="Personal Portfolio Images">
+                                                            <img src="images/projects/dashboard.png" alt="Personal Portfolio Images">
                                                         </a>
                                                     </div>
                                                     <div class="content">
                                                         <div class="category-info">
                                                             <div class="category-list">
-                                                                <a href="javascript:void(0)">Figma</a>
+                                                                <a href="javascript:void(0)">#Web Development #Frontend #Backend</a>
                                                             </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                360</span>
-                                                            </div>
+
                                                         </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">Mobile
-                                                            app landing
-                                                            design &amp;
-                                                            Services<i class="feather-arrow-up-right"></i></a>
+                                                        <h4 class="title"><a href="javascript:void(0)">
+                                                            Dashboard para gestionar +500 dispositivos de control de acceso conectados a una red de la administración pública
+                                                            <i class="feather-arrow-up-right"></i></a>
                                                         </h4>
                                                     </div>
                                                 </div>
@@ -231,72 +187,6 @@
                                         </div>
                                         <!-- End Single Portfolio -->
 
-                                        <!-- Start Single Portfolio -->
-                                        <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
-                                             class="col-lg-6 col-xl-4 col-md-6 col-12 mt--30 mt_md--30 mt_sm--30">
-                                            <div class="rn-portfolio" data-bs-toggle="modal"
-                                                 data-bs-target="#exampleModalCenter">
-                                                <div class="inner">
-                                                    <div class="thumbnail">
-                                                        <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-05.jpg"
-                                                                 alt="Personal Portfolio Images">
-                                                        </a>
-                                                    </div>
-                                                    <div class="content">
-                                                        <div class="category-info">
-                                                            <div class="category-list">
-                                                                <a href="javascript:void(0)">Web Design</a>
-                                                            </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                280</span>
-                                                            </div>
-                                                        </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">Design
-                                                            for
-                                                            tecnology,service<i
-                                                                    class="feather-arrow-up-right"></i></a>
-                                                        </h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End Single Portfolio -->
-
-                                        <!-- Start Single Portfolio -->
-                                        <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
-                                             class="col-lg-6 col-xl-4 col-md-6 col-12 mt--30 mt_md--30 mt_sm--30">
-                                            <div class="rn-portfolio" data-bs-toggle="modal"
-                                                 data-bs-target="#exampleModalCenter">
-                                                <div class="inner">
-                                                    <div class="thumbnail">
-                                                        <a href="javascript:void(0)">
-                                                            <img src="images/portfolio-06.jpg"
-                                                                 alt="Personal Portfolio Images">
-                                                        </a>
-                                                    </div>
-                                                    <div class="content">
-                                                        <div class="category-info">
-                                                            <div class="category-list">
-                                                                <a href="javascript:void(0)">Web Design</a>
-                                                            </div>
-                                                            <div class="meta">
-                                                                            <span><a href="javascript:void(0)"><i
-                                                                                    class="feather-heart"></i></a>
-                                                                                690</span>
-                                                            </div>
-                                                        </div>
-                                                        <h4 class="title"><a href="javascript:void(0)">App
-                                                            for tecnology &amp; services<i
-                                                                    class="feather-arrow-up-right"></i></a>
-                                                        </h4>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End Single Portfolio -->
                                     </div>
                                     <div class="row mt--40">
                                         <div class="col-12 text-center">
