--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                                         <!-- Start Single Portfolio -->
                                         <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
                                              class="col-lg-6 col-xl-4 col-md-6 col-12 mt--30 mt_md--30 mt_sm--30">
-                                            <div class="rn-portfolio" data-bs-toggle="modal"
-                                                 data-bs-target="#exampleModalCenter">
+                                            <div class="rn-portfolio" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
                                                 <div class="inner">
                                                     <div class="thumbnail">
                                                         <a href="javascript:void(0)">
@@ -202,14 +201,23 @@
                         <!-- Start skills area -->
                         <div class="container ">
                             <div class="row mt--50">
-                                <!-- Start Single Progressbar  -->
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <div class="progress-wrapper">
-                                        <div class="content">
+                                        <div class="content ">
                                             <h2 class="title small-h2">Top skills</h2>
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/python.png" alt="Python">
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/embeded_systems.png" alt="Embeded System">
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/iot.png" alt="IoT">
+                                            <div class="container">
+                                                <section class="tools">
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/python.png" alt="Python">
+                                                    </div>
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/embeded_systems.png" alt="Embedded Systems">
+                                                    </div>
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/iot.png" alt="IoT">
+                                                    </div>
+                                                </section>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -488,20 +496,32 @@
 
                         <div class="container ">
                             <div class="row mt--50">
-                                <!-- Start Single Progressbar  -->
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <div class="progress-wrapper">
-                                        <div class="content">
+                                        <div class="content ">
                                             <h2 class="title small-h2">My tools</h2>
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/msi_logo.png" alt="MSI">
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/raspberry_pi_2.png" alt="Raspberry Pi">
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/pycharm.png" alt="PyCharm Professional">
-                                            <img class="image-area shadow-none padding-none" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" style="width:10%" src="images/skills/ubuntu.png" alt="Ubuntu">
+                                            <div class="container">
+                                                <section class="tools">
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/msi_logo.png" alt="MSI">
+                                                    </div>
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/raspberry_pi.png" alt="MSI">
+                                                    </div>
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/pycharm.png" alt="MSI">
+                                                    </div>
+                                                    <div class="tool-circ">
+                                                        <img src="images/skills/ubuntu.png" alt="MSI">
+                                                    </div>
+                                                </section>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
 
                     </div>
                     <!-- End skills area-->
