--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
 
                         <!-- Start skills area -->
-                        <div class="container ">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" class="container">
                             <div class="row mt--50">
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <div class="progress-wrapper">
@@ -224,7 +224,7 @@
                             </div>
                         </div>
 
-                        <div class="container ">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" class="container">
                             <div class="row mt--50">
                                 <!-- Start Single Progressbar  -->
                                 <div class="col-lg-6 col-md-6 col-12">
@@ -494,7 +494,7 @@
                             </div>
                         </div>
 
-                        <div class="container ">
+                        <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100" data-aos-once="true" class="container">
                             <div class="row mt--50">
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <div class="progress-wrapper">
