--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
                          data-aos-duration="1000" data-aos-delay="100"
                          data-aos-once="true">
                         <div class="thumbnail">
-                            <img src="images/about-2.jpg"
-                                 alt="Personal Portfolio Image">
+                            <img src="images/about-2.jpg" alt="Personal Portfolio Image">
                         </div>
                     </div>
                 </div>
